CHANGES-1.3.txt
---------------

CHANGES IN CUPS V1.3.8

	- Documentation updates (STR #2785, STR #2861, STR #2862)
	- Removed unused variables and assignments found by the
	  LLVM "clang" tool.
	- Added NULL checks recommended by the LLVM "clang" tool.
	- The scheduler would crash if you started a printer that
	  pointed to a backend that did not exist (STR #2865)
	- The ppdLocalize functions incorrectly mapped all generic
	  locales to country-specific locales.
	- The cups-driverd program did not support Simplified Chinese
	  or Traditional Chinese language version strings (STR #2851)
	- Added an Indonesian translation (STR #2792)
	- Fixed a timing issue in the backends that could cause data
	  corruption with the CUPS_SC_CMD_DRAIN_OUTPUT side-channel
	  command (STR #2858)
	- The scheduler did not support "HostNameLookups" with all of
	  the boolean names (STR #2861)
	- Fixed a compile problem with glibc 2.8 (STR #2860)
	- The scheduler incorrectly filtered out queues with ACLs and
	  authentication.
	- The PostScript filter did not support %%IncludeFeature lines
	  in the page setup section of each page (STR #2831)
	- The scheduler did not generate printer-state events when the
	  default printer was changed (STR #2764)
	- cupstestppd incorrectly reported a warning about the PPD format
	  version in some locales (STR #2854)
	- cupsGetPPD() and friends incorrectly returned a PPD file for
	  a class with no printers.
	- The member-uris values for local printers in a class returned
	  by the scheduler did not reflect the connected hostname or
	  port.
	- The CUPS PHP extension was not thread-safe (STR #2828)
	- The scheduler incorrectly added the document-format-default
	  attribute to the list of "common" printer attributes, which
	  over time would slow down the printing system (STR #2755,
	  STR #2836)
	- The cups-deviced and cups-driverd helper programs did not set
	  the CFProcessPath environment variable on Mac OS X (STR #2837)